# unrealScriptEditor

./: README.md  main.py  outputTextWidget.py  pyproject.toml  requirements.txt  startup.py  util.py
codeEditor/: README.md  codeEditor.py  main.py
codeEditor/highlighter/: pyHighlight.py
icons/: icons.qrc  icons.rcc
stylesheet/: ue.qss
ui/: connector.ui  script_editor.ui
unreal-script-editor/codeEditor/highlighter/: jsonHighlight.py
unreal_script_editor/: __init__.py  main.py  outputTextWidget.py  startup.py
unreal_script_editor/ui/: output_text_widget.ui
