[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["unreal_script_editor"]


[project]
name = "unreal-script-editor"
authors = [
    {name = "Lei Xingyu"},
    {name = "Hannes Delbeke"},
]
description = "A Qt Python script editor, styled in Unreal stylesheet"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["unreal", "scripter"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', "Qt.py", "unreal-stylesheet"]
#dynamic = ["version"]
version = "0.0.2"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/leixingyu/unrealScriptEditor"
Source = "https://github.com/leixingyu/unrealScriptEditor"
